--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,12 @@
 [submodule "_vim/bundle/django"]
 	path = _vim/bundle/django
 	url = https://github.com/vim-scripts/django.vim.git
+[submodule "_vim/bundle/vim-fuzzyfinder"]
+	path = _vim/bundle/vim-fuzzyfinder
+	url = https://github.com/clones/vim-fuzzyfinder.git
+#[submodule "_vim/bundle/l9"]
+#	path = _vim/bundle/l9
+#	url = https://github.com/clones/vim-l9.git
+[submodule "_vim/bundle/vim-l9"]
+	path = _vim/bundle/vim-l9
+	url = https://github.com/clones/vim-l9.git
