added rainbow parentheses

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "_vim/bundle/vim-l9"]
 	path = _vim/bundle/vim-l9
 	url = https://github.com/clones/vim-l9.git
+[submodule "_vim/bundle/rainbow_parentheses"]
+	path = _vim/bundle/rainbow_parentheses
+	url = https://github.com/kien/rainbow_parentheses.vim.git
