--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "_vim/bundle/actionscript"]
 	path = _vim/bundle/actionscript
 	url = https://github.com/vim-scripts/actionscript.vim--Leider.git
+[submodule "_vim/bundle/vim-numbertoggle"]
+	path = _vim/bundle/vim-numbertoggle
+	url = git://github.com/jeffkreeftmeijer/vim-numbertoggle.git
