--- a/_configs/com.googlecode.iterm2.plist
+++ b/_configs/com.googlecode.iterm2.plist
@@ -997,7 +997,7 @@
 	<key>MaxVertically</key>
 	<true/>
 	<key>NSColorPanelMode</key>
-	<string>7</string>
+	<string>6</string>
 	<key>NSNavLastRootDirectory</key>
 	<string>~/Dropbox/cuker/macbook_air/configs</string>
 	<key>NSQuotedKeystrokeBinding</key>
@@ -1011,7 +1011,7 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>841 4 445 270 0 0 1366 746 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>332 143 924 485 0 0 1366 746 </string>
+	<string>345 149 924 485 0 0 1366 746 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
 	<string>0 4 1366 742 0 0 1366 746 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
@@ -1030,146 +1030,146 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.30978870391845703</real>
+				<real>0.13528014719486237</real>
 				<key>Green Component</key>
-				<real>0.30978870391845703</real>
+				<real>0.12312769144773483</real>
 				<key>Red Component</key>
-				<real>0.30978870391845703</real>
+				<real>0.11772145330905914</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.37647059559822083</real>
+				<real>0.19965693354606628</real>
 				<key>Green Component</key>
-				<real>0.42352938652038574</real>
+				<real>0.18147321045398712</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.573966383934021</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.67277032136917114</real>
+				<real>0.33485174179077148</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.69721812009811401</real>
 				<key>Red Component</key>
-				<real>0.80941480398178101</real>
+				<real>0.65277093648910522</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.79964911937713623</real>
+				<real>0.38143736124038696</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.73312276601791382</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.92229294776916504</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.998260498046875</real>
+				<real>0.69104295969009399</real>
 				<key>Green Component</key>
-				<real>0.86277562379837036</real>
+				<real>0.56590473651885986</real>
 				<key>Red Component</key>
-				<real>0.7116503119468689</real>
+				<real>0.43420237302780151</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99652087688446045</real>
+				<real>0.6687856912612915</real>
 				<key>Green Component</key>
-				<real>0.61330592632293701</real>
+				<real>0.49079161882400513</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.6257404088973999</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99703967571258545</real>
+				<real>0.65098309516906738</real>
 				<key>Green Component</key>
-				<real>0.87631028890609741</real>
+				<real>0.68746989965438843</real>
 				<key>Red Component</key>
-				<real>0.87591361999511719</real>
+				<real>0.46575835347175598</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.71428978443145752</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.72398024797439575</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.7101062536239624</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.37647059559822083</real>
+				<real>0.19350560009479523</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.51718360185623169</real>
 				<key>Red Component</key>
-				<real>0.65882349014282227</real>
+				<real>0.47679561376571655</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.7137255072593689</real>
+				<real>0.30180639028549194</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.50180763006210327</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.83306139707565308</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99607837200164795</real>
+				<real>0.54611307382583618</real>
 				<key>Green Component</key>
-				<real>0.7960783839225769</real>
+				<real>0.42862844467163086</real>
 				<key>Red Component</key>
-				<real>0.58823531866073608</real>
+				<real>0.29983076453208923</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99215692281723022</real>
+				<real>0.48750758171081543</real>
 				<key>Green Component</key>
-				<real>0.45098039507865906</real>
+				<real>0.32038700580596924</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.44386249780654907</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.99607837200164795</real>
+				<real>0.45068904757499695</real>
 				<key>Green Component</key>
-				<real>0.77254897356033325</real>
+				<real>0.48359757661819458</real>
 				<key>Red Component</key>
-				<real>0.7764706015586853</real>
+				<real>0.2984926700592041</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.93353170156478882</real>
+				<real>0.42652279138565063</real>
 				<key>Green Component</key>
-				<real>0.93353170156478882</real>
+				<real>0.3944053053855896</real>
 				<key>Red Component</key>
-				<real>0.93353170156478882</real>
+				<real>0.36455416679382324</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.48627451062202454</real>
+				<real>0.191907599568367</real>
 				<key>Green Component</key>
-				<real>0.48627451062202454</real>
+				<real>0.17542067170143127</real>
 				<key>Red Component</key>
-				<real>0.48627451062202454</real>
+				<real>0.16332851350307465</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.69019609689712524</real>
+				<real>0.32692801952362061</real>
 				<key>Green Component</key>
-				<real>0.7137255072593689</real>
+				<real>0.31686699390411377</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.74737071990966797</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -1654,7 +1654,7 @@
 			<key>Mouse Reporting</key>
 			<true/>
 			<key>Name</key>
-			<string>Default</string>
+			<string>kam</string>
 			<key>Non Ascii Font</key>
 			<string>AndaleMono 12</string>
 			<key>Non-ASCII Anti Aliased</key>
@@ -2418,7 +2418,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2013-05-31T14:28:35Z</date>
+	<date>2013-06-04T05:05:41Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
