--- a/_configs/com.googlecode.iterm2.plist
+++ b/_configs/com.googlecode.iterm2.plist
@@ -997,7 +997,11 @@
 	<key>MaxVertically</key>
 	<true/>
 	<key>NSColorPanelMode</key>
-	<string>6</string>
+	<string>1</string>
+	<key>NSColorPickerPageableNameListDefaults</key>
+	<string>1Web Safe Colors</string>
+	<key>NSColorPickerSlidersDefaults</key>
+	<string>1</string>
 	<key>NSNavLastRootDirectory</key>
 	<string>~/Dropbox/cuker/macbook_air/configs</string>
 	<key>NSQuotedKeystrokeBinding</key>
@@ -1011,7 +1015,7 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>841 4 445 270 0 0 1366 746 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>345 149 924 485 0 0 1366 746 </string>
+	<string>412 60 924 485 0 0 1366 746 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
 	<string>0 4 1366 742 0 0 1366 746 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
@@ -1030,11 +1034,11 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.13528014719486237</real>
+				<real>0.066666670143604279</real>
 				<key>Green Component</key>
-				<real>0.12312769144773483</real>
+				<real>0.066666670143604279</real>
 				<key>Red Component</key>
-				<real>0.11772145330905914</real>
+				<real>0.066666670143604279</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
@@ -1812,7 +1816,7 @@
 			<key>Terminal Type</key>
 			<string>xterm-256color</string>
 			<key>Transparency</key>
-			<real>0.05015486478805542</real>
+			<real>0.0</real>
 			<key>Triggers</key>
 			<array>
 				<dict>
