updated support for scss and less

--- a/.gitmodules
+++ b/.gitmodules
@@ -36,3 +36,9 @@
 [submodule "chrome/chrome-devtools-theme"]
 	path = chrome/chrome-devtools-theme
 	url = https://github.com/kamykaze/chrome-devtools-theme.git
+[submodule "_vim/bundle/vim-scss-syntax"]
+	path = _vim/bundle/vim-scss-syntax
+	url = git://github.com/cakebaker/scss-syntax.vim.git
+[submodule "_vim/bundle/vim-less"]
+	path = _vim/bundle/vim-less
+	url = git://github.com/KohPoll/vim-less.git
