--- a/_configs/com.googlecode.iterm2.plist
+++ b/_configs/com.googlecode.iterm2.plist
@@ -1047,13 +1047,13 @@
 	<key>NSWindow Frame NSColorPanel</key>
 	<string>1039 647 214 308 0 0 2560 1418 </string>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>1713 173 445 270 0 0 2560 1418 </string>
+	<string>1858 312 445 270 0 0 2560 1418 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>556 604 924 485 0 0 2560 1418 </string>
+	<string>249 466 924 485 0 0 2560 1418 </string>
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>1509 488 592 584 0 0 2560 1418 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>1280 79 1280 1339 0 0 2560 1418 </string>
+	<string>1039 450 1521 960 0 0 2560 1418 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>1135 530 1425 888 0 0 2560 1418 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
@@ -1696,9 +1696,9 @@
 			<key>Name</key>
 			<string>kam</string>
 			<key>Non Ascii Font</key>
-			<string>AndaleMono 12</string>
+			<string>CousineRegenForPowerline 14</string>
 			<key>Non-ASCII Anti Aliased</key>
-			<false/>
+			<true/>
 			<key>Normal Font</key>
 			<string>TerminusMedium 14</string>
 			<key>Option Key Sends</key>
@@ -1875,7 +1875,7 @@
 			<key>Unlimited Scrollback</key>
 			<true/>
 			<key>Use Bold Font</key>
-			<false/>
+			<true/>
 			<key>Use Bright Bold</key>
 			<true/>
 			<key>Vertical Spacing</key>
@@ -2460,7 +2460,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2013-06-10T19:20:45Z</date>
+	<date>2013-06-12T19:20:45Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
