--- a/.gitmodules
+++ b/.gitmodules
@@ -26,7 +26,7 @@
     url = https://github.com/vim-scripts/actionscript.vim--Leider.git
 [submodule "_vim/bundle/powerline"]
     path = _vim/bundle/powerline
-    url = http://github.com/Lokaltog/vim-powerline.git
+    url = https://github.com/Lokaltog/powerline.git
     ignore = dirty
 [submodule "chrome/chrome-devtools-theme"]
     path = chrome/chrome-devtools-theme
@@ -57,3 +57,6 @@
 [submodule "_vim/bundle/zencoding"]
 	path = _vim/bundle/zencoding
 	url = git@github.com:kamykaze/zencoding-vim.git
+[submodule "utilities/powerline"]
+	path = utilities/powerline
+	url = https://github.com/Lokaltog/powerline.git
