--- a/_configs/com.googlecode.iterm2.plist
+++ b/_configs/com.googlecode.iterm2.plist
@@ -997,46 +997,23 @@
 	<key>MaxVertically</key>
 	<true/>
 	<key>NSColorPanelMode</key>
-	<string>6</string>
+	<string>1</string>
+	<key>NSColorPickerPageableNameListDefaults</key>
+	<string>1Web Safe Colors</string>
 	<key>NSColorPickerSlidersDefaults</key>
 	<string>1</string>
-	<key>NSFileViewer</key>
-	<string>com.cocoatech.PathFinder</string>
-	<key>NSFontPanelAttributes</key>
-	<string>1, 0</string>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/dotfiles/_configs</string>
-	<key>NSNavPanelExpandedSizeForOpenMode</key>
-	<string>{585, 400}</string>
-	<key>NSNavPanelExpandedStateForSaveMode</key>
-	<true/>
+	<string>~/Dropbox/cuker/macbook_air/configs</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
 	<string></string>
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
-	<key>NSTableView Columns KeyBingingTable</key>
-	<array>
-		<data>
-		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
-		hAErATCG
-		</data>
-		<string>198</string>
-		<data>
-		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
-		hAErATGG
-		</data>
-		<string>302</string>
-	</array>
-	<key>NSTableView Hidden Columns KeyBingingTable</key>
-	<array/>
-	<key>NSTableView Sort Ordering KeyBingingTable</key>
-	<array/>
 	<key>NSToolbar Configuration Terminal Toolbar</key>
 	<dict>
 		<key>TB Display Mode</key>
-		<integer>3</integer>
+		<integer>1</integer>
 		<key>TB Icon Size Mode</key>
 		<integer>1</integer>
 		<key>TB Is Shown</key>
@@ -1045,30 +1022,36 @@
 		<integer>1</integer>
 	</dict>
 	<key>NSWindow Frame NSColorPanel</key>
-	<string>1039 647 214 308 0 0 2560 1418 </string>
+	<string>289 214 214 309 0 0 1366 746 </string>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>1858 312 445 270 0 0 2560 1418 </string>
+	<string>841 4 445 270 0 0 1366 746 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>249 466 924 485 0 0 2560 1418 </string>
-	<key>NSWindow Frame SUStatusFrame</key>
-	<string>1088 986 384 129 0 0 2560 1418 </string>
-	<key>NSWindow Frame UKCrashReporter</key>
-	<string>1509 488 592 584 0 0 2560 1418 </string>
+	<string>433 144 924 485 0 0 1366 746 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>1280 90 1273 1328 0 0 2560 1418 </string>
+	<string>683 4 683 742 0 0 1366 746 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>1135 530 1425 888 0 0 2560 1418 </string>
+	<string>0 36 1173 710 0 0 1366 746 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
-	<string>935 299 1425 888 0 0 2560 1418 </string>
+	<string>0 12 1362 734 0 0 1366 746 </string>
 	<key>NSWindow Frame iTerm Window 3</key>
-	<string>935 379 1425 888 0 0 2560 1418 </string>
+	<string>193 36 1173 710 0 0 1366 746 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
 			<key>ASCII Anti Aliased</key>
 			<false/>
-			<key>Allow Title Reporting</key>
-			<false/>
+			<key>AWDS Pane Directory</key>
+			<string></string>
+			<key>AWDS Pane Option</key>
+			<string>No</string>
+			<key>AWDS Tab Directory</key>
+			<string></string>
+			<key>AWDS Tab Option</key>
+			<string>Recycle</string>
+			<key>AWDS Window Directory</key>
+			<string></string>
+			<key>AWDS Window Option</key>
+			<string>No</string>
 			<key>Ambiguous Double Width</key>
 			<false/>
 			<key>Ansi 0 Color</key>
@@ -1282,7 +1265,7 @@
 			<key>Custom Command</key>
 			<string>Yes</string>
 			<key>Custom Directory</key>
-			<string>Yes</string>
+			<string>No</string>
 			<key>Default Bookmark</key>
 			<string>Yes</string>
 			<key>Disable Printing</key>
@@ -2402,8 +2385,6 @@
 			<string>/Users/kam</string>
 		</dict>
 	</array>
-	<key>NoSyncNeverRemindPrefsChangesCopy</key>
-	<true/>
 	<key>NotFirstRun</key>
 	<true/>
 	<key>OnlyWhenMoreTabs</key>
@@ -2470,7 +2451,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2013-06-24T20:13:31Z</date>
+	<date>2013-06-21T16:59:17Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
@@ -2527,8 +2508,6 @@
 	</array>
 	<key>TripleClickSelectsFullWrappedLines</key>
 	<false/>
-	<key>UKCrashReporterLastCrashReportDate</key>
-	<real>1370627456</real>
 	<key>URLHandlers</key>
 	<dict/>
 	<key>URLHandlersByGuid</key>
