switched snipmate to my own fork

--- a/.gitmodules
+++ b/.gitmodules
@@ -53,7 +53,7 @@
     ignore = dirty
 [submodule "_vim/bundle/snipmate_for_django"]
 	path = _vim/bundle/snipmate_for_django
-	url = https://github.com/robhudson/snipmate_for_django.git
+    url = https://github.com:kamykaze/snipmate_for_django.git
 [submodule "_vim/bundle/zencoding"]
 	path = _vim/bundle/zencoding
 	url = git@github.com:kamykaze/zencoding-vim.git
