added custom powerline configuration

--- a/_config/powerline/config.json
+++ b/_config/powerline/config.json
@@ -24,8 +24,8 @@
 			}
 		},
 		"shell": {
-			"colorscheme": "default",
-			"theme": "default_leftonly"
+			"colorscheme": "kam",
+			"theme": "kam_leftonly"
 		},
 		"tmux": {
 			"colorscheme": "default",
