initial tmux setup

--- a/_config/powerline/config.json
+++ b/_config/powerline/config.json
@@ -28,7 +28,7 @@
 			"theme": "kam_leftonly"
 		},
 		"tmux": {
-			"colorscheme": "default",
+			"colorscheme": "kam",
 			"theme": "default"
 		},
 		"vim": {
