--- a/_config/powerline/config.json
+++ b/_config/powerline/config.json
@@ -32,8 +32,8 @@
 			"theme": "default"
 		},
 		"vim": {
-			"colorscheme": "default",
-			"theme": "default",
+			"colorscheme": "kam",
+			"theme": "kam",
 			"local_themes": {
 				"cmdwin": "cmdwin",
 				"help": "help",
