--- a/_tmux.conf
+++ b/_tmux.conf
@@ -2,9 +2,12 @@
 # https://github.com/zolrath/dotfiles/blob/master/tmux.conf
 
 # Use something easier to type as the prefix.
-set -g prefix C-f
+# set -g prefix C-f
+# unbind C-b
+# bind C-f send-prefix
+set -g prefix C-Space
 unbind C-b
-bind C-f send-prefix
+bind C-Space send-prefix
 
 # Relax!
 set -sg escape-time 0
@@ -23,6 +26,9 @@ bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
  
 # unbind t
 # bind t run-shell 'wemux display_users'
+
+# increase scrollback buffer (lines)
+set -g history-limit 10000
 
 # Saner splitting.
 bind v split-window -h
