--- a/_tmux.conf
+++ b/_tmux.conf
@@ -84,6 +84,8 @@ set -g window-status-activity-attr bold
 set -g message-fg colour16
 set -g message-bg colour221
 set -g message-attr bold
+set -g pane-border-fg colour245
+set -g pane-active-border-fg colour39
 
  
 # Switch to a different session
