--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,4 @@
 [submodule "_vim/bundle/session"]
 	path = _vim/bundle/session
 	url = https://github.com/xolox/vim-session.git
+    ignore = dirty
