tmux: updated pane moving and sizing bindings to be more consistent with my vim bindings

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -40,12 +40,16 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind C-h select-pane -L
+bind C-j select-pane -D
+bind C-k select-pane -U
+bind C-l select-pane -R
  
 # Pane resizing
-bind -r C-h resize-pane -L 2
-bind -r C-j resize-pane -D 2
-bind -r C-k resize-pane -U 2
-bind -r C-l resize-pane -R 2
+bind -r H resize-pane -L 2
+bind -r J resize-pane -D 2
+bind -r K resize-pane -U 2
+bind -r L resize-pane -R 2
  
 # Window movement
 unbind ,
