vim: new binding for CtrlP; tmux: display wemux session

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -91,6 +91,8 @@ set -g message-attr bold
 set -g pane-border-fg colour245
 set -g pane-active-border-fg colour39
 
+set -g status-right "#(wemux status_users)"
+
  
 # Switch to a different session
 bind tab command-prompt "attach-session -t '%%'"
