--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,3 @@
-[submodule "_vim/bundle/vim-surround"]
-    path = _vim/bundle/vim-surround
-    url = git://github.com/tpope/vim-surround.git
-[submodule "_vim/bundle/vim-repeat"]
-    path = _vim/bundle/vim-repeat
-    url = git://github.com/tpope/vim-repeat.git
-[submodule "_vim/bundle/easymotion"]
-    path = _vim/bundle/easymotion
-    url = git://github.com/Lokaltog/vim-easymotion.git
-[submodule "_vim/bundle/django"]
-    path = _vim/bundle/django
-    url = https://github.com/vim-scripts/django.vim.git
 [submodule "_vim/bundle/vim-l9"]
     path = _vim/bundle/vim-l9
     url = https://github.com/clones/vim-l9.git
@@ -17,19 +5,9 @@
 [submodule "_vim/bundle/rainbow_parentheses"]
     path = _vim/bundle/rainbow_parentheses
     url = https://github.com/kien/rainbow_parentheses.vim.git
-[submodule "_vim/bundle/actionscript"]
-    path = _vim/bundle/actionscript
-    url = https://github.com/vim-scripts/actionscript.vim--Leider.git
-[submodule "_vim/bundle/powerline"]
-    path = _vim/bundle/powerline
-    url = https://github.com/Lokaltog/powerline.git
-    ignore = dirty
 [submodule "chrome/chrome-devtools-theme"]
     path = chrome/chrome-devtools-theme
     url = git://github.com/kamykaze/chrome-devtools-theme.git
-[submodule "_vim/bundle/vim-scss-syntax"]
-    path = _vim/bundle/vim-scss-syntax
-    url = git://github.com/cakebaker/scss-syntax.vim.git
 [submodule "_vim/bundle/vim-less"]
     path = _vim/bundle/vim-less
     url = git://github.com/KohPoll/vim-less.git
@@ -86,18 +64,12 @@
 [submodule "_vim/bundle/tslime"]
 	path = _vim/bundle/tslime
 	url = https://github.com/jgdavey/tslime.vim.git
-[submodule "_vim/bundle/ctrlp"]
-	path = _vim/bundle/ctrlp
-	url = https://github.com/kien/ctrlp.vim.git
 [submodule "_vim/bundle/ag"]
 	path = _vim/bundle/ag
 	url = https://github.com/rking/ag.vim
 [submodule "sack"]
 	path = sack
 	url = https://github.com/zph/sack.git
-[submodule "_vim/bundle/quickbuf"]
-	path = _vim/bundle/quickbuf
-	url = https://github.com/vim-scripts/QuickBuf.git
 [submodule "_vim/bundle/gitgutter"]
 	path = _vim/bundle/gitgutter
 	url = https://github.com/airblade/vim-gitgutter.git
@@ -110,3 +82,12 @@
 [submodule "_vim/bundle/indentLine"]
 	path = _vim/bundle/indentLine
 	url = https://github.com/Yggdroot/indentLine.git
+[submodule "_vim/bundle/unite"]
+	path = _vim/bundle/unite
+	url = https://github.com/Shougo/unite.vim.git
+[submodule "_vim/bundle/unite-outline"]
+	path = _vim/bundle/unite-outline
+	url = https://github.com/h1mesuke/unite-outline.git
+[submodule "_vim/bundle/neobundle"]
+	path = _vim/bundle/neobundle
+	url = https://github.com/Shougo/neobundle.vim.git
