improved powerline support

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -84,7 +84,7 @@ bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Custom status bar
 run-shell "powerline-daemon -q"
-source /Library/Python/2.7/site-packages/powerline/bindings/tmux/powerline.conf
+source ${POWERLINE_SRC}/bindings/tmux/powerline.conf
 set -g window-status-activity-attr bold
 set -g message-fg colour16
 set -g message-bg colour221
