--- a/_tmux.conf
+++ b/_tmux.conf
@@ -59,9 +59,10 @@ bind -r . select-window -t :+
 
 # sane scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-set-window-option -g mode-mouse on
+set-option -g mouse on
+
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
+
 
 # Activity
 setw -g monitor-activity on
