added kill shortcut to tmux, added jump to zsh, clean up

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -2,9 +2,6 @@
 # https://github.com/zolrath/dotfiles/blob/master/tmux.conf
 
 # Use something easier to type as the prefix.
-# set -g prefix C-f
-# unbind C-b
-# bind C-f send-prefix
 set -g prefix C-Space
 unbind C-b
 bind C-Space send-prefix
@@ -101,3 +98,11 @@ bind tab command-prompt "attach-session -t '%%'"
 
 # set xterm keys to pass keys like <S-Left>
 set-window-option -g xterm-keys on
+
+# set terminal title name
+set-option -g set-titles on
+set-option -g set-titles-string '#S'
+
+# quickly kill all windows in a session
+unbind q
+bind q run-shell "tmux list-windows | cut -d: -f1|xargs -I{} tmux send-keys -t :{} C-c C-d"
