tmux: updated status bar; added last window binding

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -53,6 +53,7 @@ unbind ,
 unbind .
 bind -r , select-window -t :-
 bind -r . select-window -t :+
+bind -r / select-window -l
 
 # sane scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
@@ -81,16 +82,26 @@ bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Custom status bar
-run-shell "powerline-daemon -q"
-source ${POWERLINE_SRC}/bindings/tmux/powerline.conf
-set -g window-status-activity-attr bold
-set -g message-fg colour16
-set -g message-bg colour221
-set -g message-attr bold
-set -g pane-border-fg colour245
-set -g pane-active-border-fg colour39
+set -g status-fg red
+set -g status-bg white
 
-set -g status-right "#(wemux status_users)"
+set -g status-left ' #(whoami)#[fg=black]:#[fg=blue]#S '
+set -g status-left-length 20
+
+
+
+setw -g window-status-attr none
+setw -g window-status-format ' #[fg=blue]#I#{?window_last_flag,/,:}#[fg=black]#W#[fg=magenta]#{?window_activity_flag,*, }'
+setw -g window-status-fg green
+setw -g window-status-bg white
+
+setw -g window-status-activity-attr none
+
+setw -g window-status-current-bg blue
+setw -g window-status-current-fg black
+setw -g window-status-current-attr bold
+setw -g window-status-current-format ' #[fg=white]#I:#[fg=black]#W '
+
 
  
 # Switch to a different session
