several zsh and tmux fixes for new MBP

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -82,16 +82,17 @@ bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Custom status bar
-set -g status-fg red
+set -g status-fg black
 set -g status-bg white
 
-set -g status-left ' #(whoami)#[fg=black]:#[fg=blue]#S '
+set -g status-left-attr bold
+set -g status-left '#[fg=black,bg=green] #S #[bg=white] '
 set -g status-left-length 20
 
 
 
 setw -g window-status-attr none
-setw -g window-status-format ' #[fg=blue]#I#{?window_last_flag,/,:}#[fg=black]#W#[fg=magenta]#{?window_activity_flag,*, }'
+setw -g window-status-format ' #[fg=blue]#{?window_last_flag,,#I }#[fg=red]#{?window_last_flag,#I/,}#[fg=black]#W#[fg=magenta]#{?window_activity_flag,!, }'
 setw -g window-status-fg green
 setw -g window-status-bg white
 
@@ -100,7 +101,7 @@ setw -g window-status-activity-attr none
 setw -g window-status-current-bg blue
 setw -g window-status-current-fg black
 setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #[fg=white]#I:#[fg=black]#W '
+setw -g window-status-current-format ' #[fg=white]#I #[fg=black]#W '
 
 
  
