updated vimrc and tmux to work with dual colorscheme (hybrid and solarized light)

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -114,6 +114,7 @@ set-window-option -g xterm-keys on
 # set terminal title name
 set-option -g set-titles on
 set-option -g set-titles-string '#S'
+set-option -g update-environment ' TERM_SCHEME'
 
 # quickly kill all windows in a session
 unbind q
