updated tmux status colors to work with base16 themes

--- a/_tmux.conf
+++ b/_tmux.conf
@@ -82,26 +82,31 @@ bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Custom status bar
-set -g status-fg black
-set -g status-bg white
 
+# default fg/bg colors
+set -g status-fg colour4
+set -g status-bg colour10
+
+# left section (session)
 set -g status-left-attr bold
-set -g status-left '#[fg=black,bg=green] #S #[bg=white] '
+set -g status-left '#[fg=colour10,bg=colour1] #S #[bg=default] '
 set -g status-left-length 20
 
-
-
+# default window/tab
 setw -g window-status-attr none
-setw -g window-status-format ' #[fg=blue]#{?window_last_flag,,#I }#[fg=red]#{?window_last_flag,#I/,}#[fg=black]#W#[fg=magenta]#{?window_activity_flag,!, }'
-setw -g window-status-fg green
-setw -g window-status-bg white
+setw -g window-status-format ' #[fg=colour9]#{?window_last_flag,,#I }#[fg=colour1]#{?window_last_flag,#I/,}#[fg=colour4]#W#[fg=colour5]#{?window_activity_flag,!, }'
+setw -g window-status-fg colour4
+setw -g window-status-bg colour10
 
+# window with activity/messages
 setw -g window-status-activity-attr none
+#setw -g window-status-activity-bg colour8
 
-setw -g window-status-current-bg blue
-setw -g window-status-current-fg black
+# current active window
+setw -g window-status-current-bg colour4
+setw -g window-status-current-fg colour0
 setw -g window-status-current-attr bold
-setw -g window-status-current-format ' #[fg=white]#I #[fg=black]#W '
+setw -g window-status-current-format ' #[fg=colour0]#I #[fg=colour10]#W '
 
 
  
